8285979: G1: G1SegmentedArraySegment::header_size() is incorrect since JDK-8283368